start epoch counter fixed in food-classifier_resume_training.ipynb

--- a/food-classifier_resume_training.ipynb
+++ b/food-classifier_resume_training.ipynb
@@ -248,7 +248,7 @@
      "output_type": "stream",
      "text": [
       "=> loading checkpoint 'models/model_resumed_101cat.pt.tar'\n",
-      "=> loaded checkpoint 'models/model_resumed_101cat.pt.tar' (epoch 45)\n"
+      "=> loaded checkpoint 'models/model_resumed_101cat.pt.tar' (epoch 67)\n"
      ]
     }
    ],
@@ -347,7 +347,7 @@
     "    valid_loss = []\n",
     "    \n",
     "    time_start = time.time()\n",
-    "    best_epoch = 0\n",
+    "    best_epoch = start_epoch\n",
     "    \n",
     "    for epoch in range(start_epoch, start_epoch + n_epochs):\n",
     "        \n",
@@ -419,32 +419,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 46 done in 2815.60 seconds at 0:4:32. \tTraining Loss: 1.865 \tValidation Loss: 1.367\n",
-      "Epoch 47 done in 3268.19 seconds at 0:59:0. \tTraining Loss: 1.875 \tValidation Loss: 1.372\n",
-      "Epoch 48 done in 3014.77 seconds at 1:49:15. \tTraining Loss: 1.873 \tValidation Loss: 1.362\n",
-      "Epoch 49 done in 3059.88 seconds at 2:40:15. \tTraining Loss: 1.861 \tValidation Loss: 1.368\n",
-      "Epoch 50 done in 2753.74 seconds at 3:26:9. \tTraining Loss: 1.861 \tValidation Loss: 1.375\n",
-      "Epoch 51 done in 2650.85 seconds at 4:10:20. \tTraining Loss: 1.869 \tValidation Loss: 1.365\n",
-      "Epoch 52 done in 2677.28 seconds at 4:54:57. \tTraining Loss: 1.858 \tValidation Loss: 1.365\n",
-      "Epoch 53 done in 2626.50 seconds at 5:38:44. \tTraining Loss: 1.852 \tValidation Loss: 1.354\n",
-      "Epoch 54 done in 2591.74 seconds at 6:21:56. \tTraining Loss: 1.853 \tValidation Loss: 1.363\n",
-      "Epoch 55 done in 2542.09 seconds at 7:4:18. \tTraining Loss: 1.853 \tValidation Loss: 1.340\n",
-      "Epoch 56 done in 2605.36 seconds at 7:47:44. \tTraining Loss: 1.847 \tValidation Loss: 1.354\n",
-      "11 epochs trained in 30607.504 seconds. \n",
-      "Best model obtained at epoch 55 with minimum validation loss : 1.340\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# train the model\n",
-    "n_epochs = 11\n",
+    "n_epochs = 2\n",
     "\n",
     "nc = 101\n",
     "\n",
