training resumed up to epoch 82

--- a/food-classifier_resume_training.ipynb
+++ b/food-classifier_resume_training.ipynb
@@ -248,7 +248,7 @@
      "output_type": "stream",
      "text": [
       "=> loading checkpoint 'models/model_resumed_101cat.pt.tar'\n",
-      "=> loaded checkpoint 'models/model_resumed_101cat.pt.tar' (epoch 67)\n"
+      "=> loaded checkpoint 'models/model_resumed_101cat.pt.tar' (epoch 74)\n"
      ]
     }
    ],
@@ -419,12 +419,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 75 done in 2176.21 seconds at 23:38:42. \tTraining Loss: 1.817 \tValidation Loss: 1.329\n",
+      "Epoch 76 done in 2729.51 seconds at 0:24:12. \tTraining Loss: 1.809 \tValidation Loss: 1.312\n",
+      "Epoch 77 done in 2654.21 seconds at 1:8:26. \tTraining Loss: 1.815 \tValidation Loss: 1.326\n",
+      "Epoch 78 done in 2561.62 seconds at 1:51:8. \tTraining Loss: 1.814 \tValidation Loss: 1.321\n",
+      "Epoch 79 done in 2544.28 seconds at 2:33:32. \tTraining Loss: 1.810 \tValidation Loss: 1.312\n",
+      "Epoch 80 done in 2425.70 seconds at 3:13:58. \tTraining Loss: 1.811 \tValidation Loss: 1.317\n",
+      "Epoch 81 done in 2425.46 seconds at 3:54:23. \tTraining Loss: 1.803 \tValidation Loss: 1.294\n",
+      "Epoch 82 done in 2383.03 seconds at 4:34:6. \tTraining Loss: 1.809 \tValidation Loss: 1.288\n",
+      "Epoch 83 done in 2447.63 seconds at 5:14:54. \tTraining Loss: 1.806 \tValidation Loss: 1.303\n",
+      "Epoch 84 done in 2309.81 seconds at 5:53:24. \tTraining Loss: 1.811 \tValidation Loss: 1.303\n",
+      "Epoch 85 done in 2357.91 seconds at 6:32:42. \tTraining Loss: 1.806 \tValidation Loss: 1.295\n",
+      "Epoch 86 done in 2306.28 seconds at 7:11:8. \tTraining Loss: 1.798 \tValidation Loss: 1.301\n",
+      "Epoch 87 done in 2300.29 seconds at 7:49:29. \tTraining Loss: 1.798 \tValidation Loss: 1.299\n",
+      "13 epochs trained in 31622.689 seconds. \n",
+      "Best model obtained at epoch 82 with minimum validation loss : 1.288\n"
+     ]
+    }
+   ],
    "source": [
     "# train the model\n",
-    "n_epochs = 2\n",
+    "n_epochs = 13\n",
     "\n",
     "nc = 101\n",
     "\n",
@@ -442,11 +464,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
