train function modified into food-classifier_mini_experiment and food-classifier_resume_training notebooks : a more precise time tracker per epoch and total time has been implemented. training loss and validation loss are tracked and saved in the output dictionary. for resuming the training, training data are now saved at each training loss improvement (it used to happen for validation loss improvement only).

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -514,7 +514,7 @@
     "    return valid_loss\n",
     "\n",
     "\n",
-    "def train(n_epochs, loaders, model, optimizer, criterion, device, path_model, fivecrop = None, lr_scheduler = None, valid_loss_min = np.Inf):\n",
+    "def train(n_epochs, loaders, model, optimizer, criterion, device, path_model, fivecrop = None, lr_scheduler = None, valid_loss_min = np.Inf, start_epoch=1):\n",
     "    \"\"\"\n",
     "    model training\n",
     "    \"\"\"\n",
@@ -523,9 +523,9 @@
     "    valid_loss = []\n",
     "    \n",
     "    time_start = time.time()\n",
-    "    best_epoch = 0\n",
+    "    best_epoch = start_epoch\n",
     "    \n",
-    "    for epoch in range(1, n_epochs+1):\n",
+    "    for epoch in range(start_epoch, start_epoch + n_epochs):\n",
     "        \n",
     "        time_start_epoch = time.time()  \n",
     "        \n",
@@ -548,35 +548,55 @@
     "            valid_loss_min = valid_loss_epoch \n",
     "            best_epoch = epoch\n",
     "            is_best = True\n",
-    "            \n",
-    "        # print epoch stats\n",
+    "        \n",
+    "        #epoch time tracker\n",
+    "        minutes_past_epoch = (time.time() - time_start_epoch)//60\n",
+    "        seconds_spare_epoch = round((time.time() - time_start_epoch)%60)\n",
     "        currentDT = datetime.datetime.now()\n",
     "        exact_time =  str(currentDT.hour) + \":\" + str(currentDT.minute) + \":\" + str(currentDT.second)\n",
-    "        print('Epoch {} done in {:.2f} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
+    "        \n",
+    "        # print epoch stats\n",
+    "        print('Epoch {} done in {} minutes and {} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
     "            epoch,             \n",
-    "            time.time() - time_start_epoch,\n",
+    "            minutes_past_epoch,\n",
+    "            seconds_spare_epoch,\n",
     "            exact_time,\n",
     "            train_loss_epoch,\n",
     "            valid_loss_epoch\n",
     "            ))   \n",
     "        \n",
     "        #save the best model status for resuming training\n",
+    "        model_status = {\n",
+    "                'epoch': epoch,\n",
+    "                'model_state_dict': model.state_dict(),\n",
+    "                'optimizer_state_dict': optimizer.state_dict(), \n",
+    "                'train_loss': train_loss,\n",
+    "                'valid_loss': valid_loss,\n",
+    "                'train_loss_min': min(train_loss),\n",
+    "                'valid_loss_min': valid_loss_min,\n",
+    "                'is_best': is_best}\n",
+    "\n",
+    "        if lr_scheduler is not None:\n",
+    "            model_status['scheduler'] = lr_schedulis_best.state_dict()\n",
+    "        \n",
     "        if is_best:\n",
-    "            model_status = {\n",
-    "                    'epoch': epoch,\n",
-    "                    'model_state_dict': model.state_dict(),\n",
-    "                    'optimizer_state_dict': optimizer.state_dict(), \n",
-    "                    'train_loss': train_loss,\n",
-    "                    'valid_loss': valid_loss_epoch,\n",
-    "                    'valid_loss_min': valid_loss_min}\n",
-    "\n",
-    "            if lr_scheduler is not None:\n",
-    "                model_status['scheduler'] = lr_scheduler.state_dict()\n",
-    "\n",
-    "            torch.save(model_status, path_model + \".tar\")\n",
+    "            print(\"Best validation results so far - saving best model in {}\".format(path_model + \"_best.tar\"))\n",
+    "            torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
+    "            torch.save(model_status, path_model + \"_best.tar\") #saving best model data\n",
+    "        else:\n",
+    "            if train_loss_epoch <= min(train_loss):\n",
+    "                torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
+    "            else:\n",
+    "                print(\"Last epoch was not saved in {} since both validation and training loss didn't improve.\")\n",
+    "    \n",
+    "    #total time tracker\n",
+    "    minutes_past = (time.time() - time_start)//60\n",
+    "    hours_past = minutes_past//60\n",
+    "    minutes_spare = minutes_past%60\n",
+    "    seconds_spare = round((time.time() - time_start)%60)\n",
     "        \n",
     "    # print final statistics    \n",
-    "    print(f\"{n_epochs} epochs trained in {(time.time() - time_start):.3f} seconds. \") \n",
+    "    print(f\"{n_epochs} epochs trained in {hours_past} hours, {minutes_spare} minutes and {seconds_spare} seconds. \") \n",
     "    \n",
     "    print(\"Best model obtained at epoch {} with minimum validation loss : {:.3f}\".format(best_epoch, valid_loss_min)) \n",
     "    \n",
