--- a/food-classifier_resume_training.ipynb
+++ b/food-classifier_resume_training.ipynb
@@ -248,7 +248,7 @@
      "output_type": "stream",
      "text": [
       "=> loading checkpoint 'models/model_resumed_101cat.pt.tar'\n",
-      "=> loaded checkpoint 'models/model_resumed_101cat.pt.tar' (epoch 74)\n"
+      "=> loaded checkpoint 'models/model_resumed_101cat.pt.tar' (epoch 82)\n"
      ]
     }
    ],
@@ -372,35 +372,55 @@
     "            valid_loss_min = valid_loss_epoch \n",
     "            best_epoch = epoch\n",
     "            is_best = True\n",
-    "            \n",
-    "        # print epoch stats\n",
+    "        \n",
+    "        #epoch time tracker\n",
+    "        minutes_past_epoch = (time.time() - time_start_epoch)//60\n",
+    "        seconds_spare_epoch = round((time.time() - time_start_epoch)%60)\n",
     "        currentDT = datetime.datetime.now()\n",
     "        exact_time =  str(currentDT.hour) + \":\" + str(currentDT.minute) + \":\" + str(currentDT.second)\n",
-    "        print('Epoch {} done in {:.2f} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
+    "        \n",
+    "        # print epoch stats\n",
+    "        print('Epoch {} done in {} minutes and {} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
     "            epoch,             \n",
-    "            time.time() - time_start_epoch,\n",
+    "            minutes_past_epoch,\n",
+    "            seconds_spare_epoch,\n",
     "            exact_time,\n",
     "            train_loss_epoch,\n",
     "            valid_loss_epoch\n",
     "            ))   \n",
     "        \n",
     "        #save the best model status for resuming training\n",
+    "        model_status = {\n",
+    "                'epoch': epoch,\n",
+    "                'model_state_dict': model.state_dict(),\n",
+    "                'optimizer_state_dict': optimizer.state_dict(), \n",
+    "                'train_loss': train_loss,\n",
+    "                'valid_loss': valid_loss,\n",
+    "                'train_loss_min': min(train_loss),\n",
+    "                'valid_loss_min': valid_loss_min,\n",
+    "                'is_best': is_best}\n",
+    "\n",
+    "        if lr_scheduler is not None:\n",
+    "            model_status['scheduler'] = lr_schedulis_best.state_dict()\n",
+    "        \n",
     "        if is_best:\n",
-    "            model_status = {\n",
-    "                    'epoch': epoch,\n",
-    "                    'model_state_dict': model.state_dict(),\n",
-    "                    'optimizer_state_dict': optimizer.state_dict(), \n",
-    "                    'train_loss': train_loss,\n",
-    "                    'valid_loss': valid_loss_epoch,\n",
-    "                    'valid_loss_min': valid_loss_min}\n",
-    "\n",
-    "            if lr_scheduler is not None:\n",
-    "                model_status['scheduler'] = lr_scheduler.state_dict()\n",
-    "\n",
-    "            torch.save(model_status, path_model + \".tar\")\n",
+    "            print(\"Best validation results so far - saving best model in {}\".format(path_model + \"_best.tar\"))\n",
+    "            torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
+    "            torch.save(model_status, path_model + \"_best.tar\") #saving best model data\n",
+    "        else:\n",
+    "            if train_loss_epoch <= min(train_loss):\n",
+    "                torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
+    "            else:\n",
+    "                print(\"Last epoch was not saved in {} since both validation and training loss didn't improve.\")\n",
+    "    \n",
+    "    #total time tracker\n",
+    "    minutes_past = (time.time() - time_start)//60\n",
+    "    hours_past = minutes_past//60\n",
+    "    minutes_spare = minutes_past%60\n",
+    "    seconds_spare = round((time.time() - time_start)%60)\n",
     "        \n",
     "    # print final statistics    \n",
-    "    print(f\"{n_epochs} epochs trained in {(time.time() - time_start):.3f} seconds. \") \n",
+    "    print(f\"{n_epochs} epochs trained in {hours_past} hours, {minutes_spare} minutes and {seconds_spare} seconds. \") \n",
     "    \n",
     "    print(\"Best model obtained at epoch {} with minimum validation loss : {:.3f}\".format(best_epoch, valid_loss_min)) \n",
     "    \n",
@@ -426,21 +446,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 75 done in 2176.21 seconds at 23:38:42. \tTraining Loss: 1.817 \tValidation Loss: 1.329\n",
-      "Epoch 76 done in 2729.51 seconds at 0:24:12. \tTraining Loss: 1.809 \tValidation Loss: 1.312\n",
-      "Epoch 77 done in 2654.21 seconds at 1:8:26. \tTraining Loss: 1.815 \tValidation Loss: 1.326\n",
-      "Epoch 78 done in 2561.62 seconds at 1:51:8. \tTraining Loss: 1.814 \tValidation Loss: 1.321\n",
-      "Epoch 79 done in 2544.28 seconds at 2:33:32. \tTraining Loss: 1.810 \tValidation Loss: 1.312\n",
-      "Epoch 80 done in 2425.70 seconds at 3:13:58. \tTraining Loss: 1.811 \tValidation Loss: 1.317\n",
-      "Epoch 81 done in 2425.46 seconds at 3:54:23. \tTraining Loss: 1.803 \tValidation Loss: 1.294\n",
-      "Epoch 82 done in 2383.03 seconds at 4:34:6. \tTraining Loss: 1.809 \tValidation Loss: 1.288\n",
-      "Epoch 83 done in 2447.63 seconds at 5:14:54. \tTraining Loss: 1.806 \tValidation Loss: 1.303\n",
-      "Epoch 84 done in 2309.81 seconds at 5:53:24. \tTraining Loss: 1.811 \tValidation Loss: 1.303\n",
-      "Epoch 85 done in 2357.91 seconds at 6:32:42. \tTraining Loss: 1.806 \tValidation Loss: 1.295\n",
-      "Epoch 86 done in 2306.28 seconds at 7:11:8. \tTraining Loss: 1.798 \tValidation Loss: 1.301\n",
-      "Epoch 87 done in 2300.29 seconds at 7:49:29. \tTraining Loss: 1.798 \tValidation Loss: 1.299\n",
-      "13 epochs trained in 31622.689 seconds. \n",
-      "Best model obtained at epoch 82 with minimum validation loss : 1.288\n"
+      "Epoch 83 done in 3232.67 seconds at 23:32:56. \tTraining Loss: 1.806 \tValidation Loss: 1.303\n",
+      "Epoch 84 done in 3286.95 seconds at 0:27:43. \tTraining Loss: 1.812 \tValidation Loss: 1.304\n",
+      "Epoch 85 done in 3321.82 seconds at 1:23:5. \tTraining Loss: 1.807 \tValidation Loss: 1.304\n",
+      "Epoch 86 done in 3337.44 seconds at 2:18:42. \tTraining Loss: 1.791 \tValidation Loss: 1.303\n",
+      "Epoch 87 done in 3360.27 seconds at 3:14:43. \tTraining Loss: 1.803 \tValidation Loss: 1.309\n",
+      "Epoch 88 done in 3285.09 seconds at 4:9:28. \tTraining Loss: 1.798 \tValidation Loss: 1.297\n",
+      "Epoch 89 done in 3255.10 seconds at 5:3:43. \tTraining Loss: 1.802 \tValidation Loss: 1.293\n",
+      "Epoch    90: reducing learning rate of group 0 to 7.5000e-05.\n",
+      "Epoch 90 done in 3205.93 seconds at 5:57:9. \tTraining Loss: 1.804 \tValidation Loss: 1.291\n",
+      "Epoch 91 done in 3121.26 seconds at 6:49:10. \tTraining Loss: 1.779 \tValidation Loss: 1.280\n",
+      "Epoch 92 done in 3237.66 seconds at 7:43:8. \tTraining Loss: 1.777 \tValidation Loss: 1.288\n",
+      "Epoch 93 done in 2990.92 seconds at 8:32:59. \tTraining Loss: 1.775 \tValidation Loss: 1.272\n",
+      "Epoch 94 done in 3130.10 seconds at 9:25:9. \tTraining Loss: 1.776 \tValidation Loss: 1.268\n",
+      "Epoch 95 done in 3011.81 seconds at 10:15:22. \tTraining Loss: 1.775 \tValidation Loss: 1.268\n",
+      "13 epochs trained in 41778.197 seconds. \n",
+      "Best model obtained at epoch 95 with minimum validation loss : 1.268\n"
      ]
     }
    ],
