--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -587,7 +587,7 @@
     "            if train_loss_epoch <= min(train_loss):\n",
     "                torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
     "            else:\n",
-    "                print(\"Last epoch was not saved in {} since both validation and training loss didn't improve.\")\n",
+    "                print(\"Last epoch was not saved in {} since both validation and training loss didn't improve.\".format(path_model + \".tar\"))\n",
     "    \n",
     "    #total time tracker\n",
     "    minutes_past = (time.time() - time_start)//60\n",
