typo fixed in lr_scheduler status saving process

--- a/food-classifier_resume_training.ipynb
+++ b/food-classifier_resume_training.ipynb
@@ -401,7 +401,7 @@
     "                'is_best': is_best}\n",
     "\n",
     "        if lr_scheduler is not None:\n",
-    "            model_status['scheduler'] = lr_schedulis_best.state_dict()\n",
+    "            model_status['scheduler'] = lr_scheduler.state_dict()\n",
     "        \n",
     "        if is_best:\n",
     "            print(\"Best validation results so far - saving best model in {}\".format(path_model + \"_best.tar\"))\n",
