train function improved in order to read train and validation values tracking

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -514,14 +514,11 @@
     "    return valid_loss\n",
     "\n",
     "\n",
-    "def train(n_epochs, loaders, model, optimizer, criterion, device, path_model, fivecrop = None, lr_scheduler = None, valid_loss_min = np.Inf, start_epoch=1):\n",
+    "def train(n_epochs, loaders, model, optimizer, criterion, device, path_model, fivecrop = None, lr_scheduler = None, valid_loss_min = np.Inf, start_epoch=1, train_loss = [], valid_loss = []):\n",
     "    \"\"\"\n",
     "    model training\n",
     "    \"\"\"\n",
     "     \n",
-    "    train_loss = []\n",
-    "    valid_loss = []\n",
-    "    \n",
     "    time_start = time.time()\n",
     "    best_epoch = start_epoch\n",
     "    \n",
@@ -548,18 +545,13 @@
     "            valid_loss_min = valid_loss_epoch \n",
     "            best_epoch = epoch\n",
     "            is_best = True\n",
-    "        \n",
-    "        #epoch time tracker\n",
-    "        minutes_past_epoch = (time.time() - time_start_epoch)//60\n",
-    "        seconds_spare_epoch = round((time.time() - time_start_epoch)%60)\n",
+    "            \n",
+    "        # print epoch stats\n",
     "        currentDT = datetime.datetime.now()\n",
     "        exact_time =  str(currentDT.hour) + \":\" + str(currentDT.minute) + \":\" + str(currentDT.second)\n",
-    "        \n",
-    "        # print epoch stats\n",
-    "        print('Epoch {} done in {} minutes and {} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
+    "        print('Epoch {} done in {:.2f} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
     "            epoch,             \n",
-    "            minutes_past_epoch,\n",
-    "            seconds_spare_epoch,\n",
+    "            time.time() - time_start_epoch,\n",
     "            exact_time,\n",
     "            train_loss_epoch,\n",
     "            valid_loss_epoch\n",
@@ -577,7 +569,7 @@
     "                'is_best': is_best}\n",
     "\n",
     "        if lr_scheduler is not None:\n",
-    "            model_status['scheduler'] = lr_scheduler.state_dict()\n",
+    "            model_status['scheduler'] = lr_schedulis_best.state_dict()\n",
     "        \n",
     "        if is_best:\n",
     "            print(\"Best validation results so far - saving best model in {}\".format(path_model + \"_best.tar\"))\n",
@@ -587,16 +579,11 @@
     "            if train_loss_epoch <= min(train_loss):\n",
     "                torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
     "            else:\n",
-    "                print(\"Last epoch was not saved in {} since both validation and training loss didn't improve.\".format(path_model + \".tar\"))\n",
-    "    \n",
-    "    #total time tracker\n",
-    "    minutes_past = (time.time() - time_start)//60\n",
-    "    hours_past = minutes_past//60\n",
-    "    minutes_spare = minutes_past%60\n",
-    "    seconds_spare = round((time.time() - time_start)%60)\n",
+    "                print(\"Last epoch was not saved in {} since both validation and training loss didn't improve.\")\n",
+    "            \n",
     "        \n",
     "    # print final statistics    \n",
-    "    print(f\"{n_epochs} epochs trained in {hours_past} hours, {minutes_spare} minutes and {seconds_spare} seconds. \") \n",
+    "    print(f\"{n_epochs} epochs trained in {(time.time() - time_start):.3f} seconds. \") \n",
     "    \n",
     "    print(\"Best model obtained at epoch {} with minimum validation loss : {:.3f}\".format(best_epoch, valid_loss_min)) \n",
     "    \n",
