time tracker at each epoch added again

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -546,16 +546,21 @@
     "            best_epoch = epoch\n",
     "            is_best = True\n",
     "            \n",
-    "        # print epoch stats\n",
+    "        #epoch time tracker\n",
+    "        minutes_past_epoch = (time.time() - time_start_epoch)//60\n",
+    "        seconds_spare_epoch = round((time.time() - time_start_epoch)%60)\n",
     "        currentDT = datetime.datetime.now()\n",
     "        exact_time =  str(currentDT.hour) + \":\" + str(currentDT.minute) + \":\" + str(currentDT.second)\n",
-    "        print('Epoch {} done in {:.2f} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
+    "        \n",
+    "        # print epoch stats\n",
+    "        print('Epoch {} done in {} minutes and {} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
     "            epoch,             \n",
-    "            time.time() - time_start_epoch,\n",
+    "            minutes_past_epoch,\n",
+    "            seconds_spare_epoch,\n",
     "            exact_time,\n",
     "            train_loss_epoch,\n",
     "            valid_loss_epoch\n",
-    "            ))   \n",
+    "            ))    \n",
     "        \n",
     "        #save the best model status for resuming training\n",
     "        model_status = {\n",
@@ -574,7 +579,7 @@
     "        if is_best:\n",
     "            print(\"Best validation results so far - saving best model in {}\".format(path_model + \"_best.tar\"))\n",
     "            torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
-    "            torch.save(model_status, path_model + \"_best.tar\") #saving best model data\n",
+    "            torch.save(model_status, path_model.replace(\".pt\", \"\") + \"_best.pt.tar\") #saving best model data\n",
     "        else:\n",
     "            if train_loss_epoch <= min(train_loss):\n",
     "                torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
@@ -582,8 +587,14 @@
     "                print(\"Last epoch was not saved in {} since both validation and training loss didn't improve.\")\n",
     "            \n",
     "        \n",
+    "    #total time tracker\n",
+    "    minutes_past = (time.time() - time_start)//60\n",
+    "    hours_past = minutes_past//60\n",
+    "    minutes_spare = minutes_past%60\n",
+    "    seconds_spare = round((time.time() - time_start)%60)\n",
+    "        \n",
     "    # print final statistics    \n",
-    "    print(f\"{n_epochs} epochs trained in {(time.time() - time_start):.3f} seconds. \") \n",
+    "    print(f\"{n_epochs} epochs trained in {hours_past} hours, {minutes_spare} minutes and {seconds_spare} seconds. \") \n",
     "    \n",
     "    print(\"Best model obtained at epoch {} with minimum validation loss : {:.3f}\".format(best_epoch, valid_loss_min)) \n",
     "    \n",
