typo fixed on the print message when saving the best model

--- a/food-classifier_resume_training.ipynb
+++ b/food-classifier_resume_training.ipynb
@@ -410,7 +410,7 @@
     "            model_status['scheduler'] = lr_scheduler.state_dict()\n",
     "        \n",
     "        if is_best:\n",
-    "            print(\"Best validation results so far - saving best model in {}\".format(path_model + \"_best.tar\"))\n",
+    "            print(\"Best validation results so far - saving best model in {}\".format(path_model.replace(\".pt\", \"\") + \"_best.pt.tar\"))\n",
     "            torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
     "            torch.save(model_status, path_model.replace(\".pt\", \"\") + \"_best.pt.tar\") #saving best model data\n",
     "        else:\n",
