--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -443,192 +443,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ### Training function implementation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "import datetime\n",
-    "\n",
-    "def train_epoch(model,train_loader,optimizer,criterion,device):\n",
-    "    \"\"\"\n",
-    "    train steps at each epoch\n",
-    "    \"\"\"\n",
-    "    train_loss = 0.0\n",
-    "    \n",
-    "    model.train()\n",
-    "    \n",
-    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
-    "        \n",
-    "        data, target = data.to(device), target.to(device) # move to GPU\n",
-    "        \n",
-    "        optimizer.zero_grad() # set gradients to 0\n",
-    "        \n",
-    "        output = model(data) # get output\n",
-    "        \n",
-    "        loss = criterion(output, target) # calculate loss\n",
-    "        train_loss += loss.item() * data.size(0)\n",
-    "        \n",
-    "        loss.backward() # calculate gradients\n",
-    "        \n",
-    "        optimizer.step() # take step\n",
-    "        \n",
-    "    train_loss = train_loss / len(train_loader.dataset)\n",
-    "    return model, train_loss\n",
-    "        \n",
-    "def valid_epoch(model, valid_loader, criterion, device, fivecrop):\n",
-    "    \"\"\"\n",
-    "    validation prediction steps at each epoch\n",
-    "    \"\"\"\n",
-    "    valid_loss = 0.0\n",
-    "    \n",
-    "    model.eval()\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        for data, target in valid_loader:\n",
-    "            \n",
-    "            data, target = data.to(device), target.to(device) # move to GPU\n",
-    "            \n",
-    "            # if we do test time augmentation with 5crop we'll have an extra dimension in our tensor\n",
-    "            if fivecrop == \"mean\":\n",
-    "                bs, ncrops, c, h, w = data.size()\n",
-    "                output = model(data.view(-1, c, h, w)) # fuse batch size and ncrops\n",
-    "                output = output.view(bs, ncrops, -1).mean(1)\n",
-    "            elif fivecrop == \"max\":\n",
-    "                bs, ncrops, c, h, w = data.size()\n",
-    "                output = model(data.view(-1, c, h, w)) # fuse batch size and ncrops\n",
-    "                output = output.view(bs, ncrops, -1).max(1)[0]\n",
-    "            else:\n",
-    "                output = model(data)\n",
-    "                \n",
-    "            ## update the average validation loss\n",
-    "            loss = criterion(output, target)\n",
-    "            valid_loss += loss.item() * data.size(0)\n",
-    "            \n",
-    "    valid_loss = valid_loss / len(valid_loader.dataset) \n",
-    "    return valid_loss\n",
-    "\n",
-    "\n",
-    "def train(n_epochs, loaders, model, optimizer, criterion, device, path_model, fivecrop = None, lr_scheduler = None, valid_loss_min = np.Inf, start_epoch=1, train_loss = [], valid_loss = []):\n",
-    "    \"\"\"\n",
-    "    model training\n",
-    "    \"\"\"\n",
-    "     \n",
-    "    time_start = time.time()\n",
-    "    best_epoch = start_epoch\n",
-    "    \n",
-    "    for epoch in range(start_epoch, start_epoch + n_epochs):\n",
-    "        \n",
-    "        time_start_epoch = time.time()  \n",
-    "        \n",
-    "        # train current epoch\n",
-    "        model, train_loss_epoch = train_epoch(model,loaders[\"train\"],optimizer,criterion,device) \n",
-    "        train_loss.append(train_loss_epoch)   \n",
-    "        \n",
-    "        # validate current epoch\n",
-    "        valid_loss_epoch = valid_epoch(model,loaders[\"val\"],criterion,device,fivecrop)\n",
-    "        \n",
-    "        # learning rate scheduler\n",
-    "        if lr_scheduler is not None:\n",
-    "            lr_scheduler.step(valid_loss_epoch)\n",
-    "        valid_loss.append(valid_loss_epoch)  \n",
-    "        \n",
-    "        is_best = False\n",
-    "        \n",
-    "        if valid_loss_epoch <= valid_loss_min: # save if validation loss is the lowest so far\n",
-    "            torch.save(model.state_dict(), path_model)\n",
-    "            valid_loss_min = valid_loss_epoch \n",
-    "            best_epoch = epoch\n",
-    "            is_best = True\n",
-    "            \n",
-    "        #epoch time tracker\n",
-    "        minutes_past_epoch = (time.time() - time_start_epoch)//60\n",
-    "        seconds_spare_epoch = round((time.time() - time_start_epoch)%60)\n",
-    "        currentDT = datetime.datetime.now()\n",
-    "        exact_time =  str(currentDT.hour) + \":\" + str(currentDT.minute) + \":\" + str(currentDT.second)\n",
-    "        \n",
-    "        # print epoch stats\n",
-    "        print('Epoch {} done in {} minutes and {} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
-    "            epoch,             \n",
-    "            minutes_past_epoch,\n",
-    "            seconds_spare_epoch,\n",
-    "            exact_time,\n",
-    "            train_loss_epoch,\n",
-    "            valid_loss_epoch\n",
-    "            ))    \n",
-    "        \n",
-    "        #save the best model status for resuming training\n",
-    "        model_status = {\n",
-    "                'epoch': epoch,\n",
-    "                'model_state_dict': model.state_dict(),\n",
-    "                'optimizer_state_dict': optimizer.state_dict(), \n",
-    "                'train_loss': train_loss,\n",
-    "                'valid_loss': valid_loss,\n",
-    "                'train_loss_min': min(train_loss),\n",
-    "                'valid_loss_min': valid_loss_min,\n",
-    "                'is_best': is_best}\n",
-    "\n",
-    "        if lr_scheduler is not None:\n",
-    "            model_status['scheduler'] = lr_scheduler.state_dict()\n",
-    "        \n",
-    "        if is_best:\n",
-    "            print(\"Best validation results so far - saving best model in {}\".format(path_model.replace(\".pt\", \"\") + \"_best.pt.tar\"))\n",
-    "            torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
-    "            torch.save(model_status, path_model.replace(\".pt\", \"\") + \"_best.pt.tar\") #saving best model data\n",
-    "        else:\n",
-    "            if train_loss_epoch <= min(train_loss):\n",
-    "                torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
-    "            else:\n",
-    "                print(\"Last epoch was not saved in {} since both validation and training loss didn't improve.\")\n",
-    "            \n",
-    "        \n",
-    "    #total time tracker\n",
-    "    minutes_past = (time.time() - time_start)//60\n",
-    "    hours_past = minutes_past//60\n",
-    "    minutes_spare = minutes_past%60\n",
-    "    seconds_spare = round((time.time() - time_start)%60)\n",
-    "        \n",
-    "    # print final statistics    \n",
-    "    print(f\"{n_epochs} epochs trained in {hours_past} hours, {minutes_spare} minutes and {seconds_spare} seconds. \") \n",
-    "    \n",
-    "    print(\"Best model obtained at epoch {} with minimum validation loss : {:.3f}\".format(best_epoch, valid_loss_min)) \n",
-    "    \n",
-    "    # Load best config\n",
-    "    model.load_state_dict(torch.load(path_model))\n",
-    "    \n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "> ## Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 done in 2390.76 seconds at 20:49:53. \tTraining Loss: 3.385 \tValidation Loss: 2.363\n",
-      "Epoch 2 done in 2530.60 seconds at 21:32:4. \tTraining Loss: 2.595 \tValidation Loss: 2.037\n",
-      "Epoch 3 done in 2520.86 seconds at 22:14:5. \tTraining Loss: 2.406 \tValidation Loss: 1.880\n",
-      "3 epochs trained in 7443.216 seconds. \n",
-      "Best model obtained at epoch 3 with minimum validation loss : 1.880\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from pytorch_utils import train\n",
+    "\n",
     "# train the model\n",
     "n_epochs = 3\n",
     "\n",
@@ -641,57 +466,6 @@
     "                       'models/model_res_{}cat.pt'.format(nc), \n",
     "                       fivecrop = \"mean\", \n",
     "                       lr_scheduler = scheduler_transfer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> ### Testing function implementation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test(loaders, model, criterion, device):\n",
-    "    \"\"\"\n",
-    "    test function\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    test_loss = 0.\n",
-    "    correct = 0.\n",
-    "    total = 0.\n",
-    "    \n",
-    "    model.eval()\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        \n",
-    "        for batch_idx, (data, target) in enumerate(loaders['test']):\n",
-    "            \n",
-    "            data, target = data.to(device), target.to(device) # move to GPU\n",
-    "            \n",
-    "            bs, ncrops, c, h, w = data.size()\n",
-    "            \n",
-    "            # forward pass: compute predicted outputs by passing inputs to the model\n",
-    "            output = model(data.view(-1, c, h, w)) # fuse batch size and ncrops\n",
-    "            output = output.view(bs, ncrops, -1).mean(1)    \n",
-    "            \n",
-    "            loss = criterion(output, target) # calculate the loss\n",
-    "            \n",
-    "            test_loss = test_loss + ((1 / (batch_idx + 1)) * (loss.data - test_loss)) # update average test loss \n",
-    "            \n",
-    "            pred = output.data.max(1, keepdim=True)[1] # convert output probabilities to predicted class\n",
-    "            \n",
-    "            # compare predictions to true label\n",
-    "            correct += np.sum(np.squeeze(pred.eq(target.data.view_as(pred))).cpu().numpy()) \n",
-    "            total += data.size(0)            \n",
-    "            \n",
-    "    print('Test Loss: {:.6f}\\n'.format(test_loss))\n",
-    "    print('\\nTest Accuracy: %2d%% (%2d/%2d)' % (\n",
-    "        100. * correct / total, correct, total))"
    ]
   },
   {
@@ -718,6 +492,7 @@
     }
    ],
    "source": [
+    "from pytorch_utils import test\n",
     "test(loaders_transfer, model_transfer, criterion_transfer, device)"
    ]
   },
