--- a/food-classifier_resume_training.ipynb
+++ b/food-classifier_resume_training.ipynb
@@ -210,45 +210,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_checkpoint(model, optimizer, scheduler, losslogger, filename='models/model_res_101cat.pt.tar'):\n",
-    "    # Note: Input model & optimizer should be pre-defined.  This routine only updates their states.\n",
-    "    start_epoch = 0\n",
-    "    if os.path.isfile(filename):\n",
-    "        print(\"=> loading checkpoint '{}'\".format(filename))\n",
-    "        checkpoint = torch.load(filename)\n",
-    "        \n",
-    "        start_epoch = checkpoint['epoch']\n",
-    "        \n",
-    "        model.load_state_dict(checkpoint['model_state_dict'])\n",
-    "        \n",
-    "        optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
-    "        \n",
-    "        scheduler.load_state_dict(checkpoint['scheduler'])\n",
-    "        \n",
-    "        losslogger = checkpoint['valid_loss_min']\n",
-    "        print(\"=> loaded checkpoint '{}' (epoch {})\"\n",
-    "                  .format(filename, checkpoint['epoch']))\n",
-    "        \n",
-    "        train_loss_tracker = checkpoint['train_loss']\n",
-    "        valid_loss_tracker = checkpoint['valid_loss']\n",
-    "        \n",
-    "        if checkpoint['is_best']:\n",
-    "            print(\"Starting from the best model trained so far (based on validation results)\")\n",
-    "        else:\n",
-    "            print(\"Not starting from the best model trained so far (based on validation results)\")\n",
-    "        \n",
-    "    else:\n",
-    "        print(\"=> no checkpoint found at '{}'\".format(filename))\n",
-    "\n",
-    "    return model, optimizer, scheduler, start_epoch, losslogger, train_loss_tracker, valid_loss_tracker"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -262,6 +223,8 @@
     }
    ],
    "source": [
+    "from pytorch_utils import load_checkpoint\n",
+    "\n",
     "model_retr, optimizer, scheduler, start_epoch, losslogger, train_loss_tracker, valid_loss_tracker = load_checkpoint(model_transfer, optimizer_transfer, scheduler_transfer, criterion_transfer)\n",
     "model_retr = model_retr.to(device)\n",
     "\n",
@@ -270,171 +233,6 @@
     "    for k, v in state.items():\n",
     "        if isinstance(v, torch.Tensor):\n",
     "            state[k] = v.to(device)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> ### Training function implementation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "import datetime\n",
-    "\n",
-    "def train_epoch(model,train_loader,optimizer,criterion,device):\n",
-    "    \"\"\"\n",
-    "    train steps at each epoch\n",
-    "    \"\"\"\n",
-    "    train_loss = 0.0\n",
-    "    \n",
-    "    model.train()\n",
-    "    \n",
-    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
-    "        \n",
-    "        data, target = data.to(device), target.to(device) # move to GPU\n",
-    "        \n",
-    "        optimizer.zero_grad() # set gradients to 0\n",
-    "        \n",
-    "        output = model(data) # get output\n",
-    "        \n",
-    "        loss = criterion(output, target) # calculate loss\n",
-    "        train_loss += loss.item() * data.size(0)\n",
-    "        \n",
-    "        loss.backward() # calculate gradients\n",
-    "        \n",
-    "        optimizer.step() # take step\n",
-    "        \n",
-    "    train_loss = train_loss / len(train_loader.dataset)\n",
-    "    return model, train_loss\n",
-    "        \n",
-    "def valid_epoch(model, valid_loader, criterion, device, fivecrop):\n",
-    "    \"\"\"\n",
-    "    validation prediction steps at each epoch\n",
-    "    \"\"\"\n",
-    "    valid_loss = 0.0\n",
-    "    \n",
-    "    model.eval()\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        for data, target in valid_loader:\n",
-    "            \n",
-    "            data, target = data.to(device), target.to(device) # move to GPU\n",
-    "            \n",
-    "            # if we do test time augmentation with 5crop we'll have an extra dimension in our tensor\n",
-    "            if fivecrop == \"mean\":\n",
-    "                bs, ncrops, c, h, w = data.size()\n",
-    "                output = model(data.view(-1, c, h, w)) # fuse batch size and ncrops\n",
-    "                output = output.view(bs, ncrops, -1).mean(1)\n",
-    "            elif fivecrop == \"max\":\n",
-    "                bs, ncrops, c, h, w = data.size()\n",
-    "                output = model(data.view(-1, c, h, w)) # fuse batch size and ncrops\n",
-    "                output = output.view(bs, ncrops, -1).max(1)[0]\n",
-    "            else:\n",
-    "                output = model(data)\n",
-    "                \n",
-    "            ## update the average validation loss\n",
-    "            loss = criterion(output, target)\n",
-    "            valid_loss += loss.item() * data.size(0)\n",
-    "            \n",
-    "    valid_loss = valid_loss / len(valid_loader.dataset) \n",
-    "    return valid_loss\n",
-    "\n",
-    "\n",
-    "def train(n_epochs, loaders, model, optimizer, criterion, device, path_model, fivecrop = None, lr_scheduler = None, valid_loss_min = np.Inf, start_epoch=1, train_loss = [], valid_loss = []):\n",
-    "    \"\"\"\n",
-    "    model training\n",
-    "    \"\"\"\n",
-    "     \n",
-    "    time_start = time.time()\n",
-    "    best_epoch = start_epoch\n",
-    "    \n",
-    "    for epoch in range(start_epoch, start_epoch + n_epochs):\n",
-    "        \n",
-    "        time_start_epoch = time.time()  \n",
-    "        \n",
-    "        # train current epoch\n",
-    "        model, train_loss_epoch = train_epoch(model,loaders[\"train\"],optimizer,criterion,device) \n",
-    "        train_loss.append(train_loss_epoch)   \n",
-    "        \n",
-    "        # validate current epoch\n",
-    "        valid_loss_epoch = valid_epoch(model,loaders[\"val\"],criterion,device,fivecrop)\n",
-    "        \n",
-    "        # learning rate scheduler\n",
-    "        if lr_scheduler is not None:\n",
-    "            lr_scheduler.step(valid_loss_epoch)\n",
-    "        valid_loss.append(valid_loss_epoch)  \n",
-    "        \n",
-    "        is_best = False\n",
-    "        \n",
-    "        if valid_loss_epoch <= valid_loss_min: # save if validation loss is the lowest so far\n",
-    "            torch.save(model.state_dict(), path_model)\n",
-    "            valid_loss_min = valid_loss_epoch \n",
-    "            best_epoch = epoch\n",
-    "            is_best = True\n",
-    "            \n",
-    "        #epoch time tracker\n",
-    "        minutes_past_epoch = (time.time() - time_start_epoch)//60\n",
-    "        seconds_spare_epoch = round((time.time() - time_start_epoch)%60)\n",
-    "        currentDT = datetime.datetime.now()\n",
-    "        exact_time =  str(currentDT.hour) + \":\" + str(currentDT.minute) + \":\" + str(currentDT.second)\n",
-    "        \n",
-    "        # print epoch stats\n",
-    "        print('Epoch {} done in {} minutes and {} seconds at {}. \\tTraining Loss: {:.3f} \\tValidation Loss: {:.3f}'.format( \n",
-    "            epoch,             \n",
-    "            minutes_past_epoch,\n",
-    "            seconds_spare_epoch,\n",
-    "            exact_time,\n",
-    "            train_loss_epoch,\n",
-    "            valid_loss_epoch\n",
-    "            ))   \n",
-    "        \n",
-    "        #save the best model status for resuming training\n",
-    "        model_status = {\n",
-    "                'epoch': epoch,\n",
-    "                'model_state_dict': model.state_dict(),\n",
-    "                'optimizer_state_dict': optimizer.state_dict(), \n",
-    "                'train_loss': train_loss,\n",
-    "                'valid_loss': valid_loss,\n",
-    "                'train_loss_min': min(train_loss),\n",
-    "                'valid_loss_min': valid_loss_min,\n",
-    "                'is_best': is_best}\n",
-    "\n",
-    "        if lr_scheduler is not None:\n",
-    "            model_status['scheduler'] = lr_scheduler.state_dict()\n",
-    "        \n",
-    "        if is_best:\n",
-    "            print(\"Best validation results so far - saving best model in {}\".format(path_model.replace(\".pt\", \"\") + \"_best.pt.tar\"))\n",
-    "            torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
-    "            torch.save(model_status, path_model.replace(\".pt\", \"\") + \"_best.pt.tar\") #saving best model data\n",
-    "        else:\n",
-    "            if train_loss_epoch <= min(train_loss):\n",
-    "                torch.save(model_status, path_model + \".tar\") #saving resume training model data\n",
-    "            else:\n",
-    "                print(\"Last epoch was not saved in {} since both validation and training loss didn't improve.\")\n",
-    "            \n",
-    "        \n",
-    "    #total time tracker\n",
-    "    minutes_past = (time.time() - time_start)//60\n",
-    "    hours_past = minutes_past//60\n",
-    "    minutes_spare = minutes_past%60\n",
-    "    seconds_spare = round((time.time() - time_start)%60)\n",
-    "        \n",
-    "    # print final statistics    \n",
-    "    print(f\"{n_epochs} epochs trained in {hours_past} hours, {minutes_spare} minutes and {seconds_spare} seconds. \") \n",
-    "    \n",
-    "    print(\"Best model obtained at epoch {} with minimum validation loss : {:.3f}\".format(best_epoch, valid_loss_min)) \n",
-    "    \n",
-    "    # Load best config\n",
-    "    model.load_state_dict(torch.load(path_model))\n",
-    "    \n",
-    "    return model"
    ]
   },
   {
@@ -473,6 +271,8 @@
     }
    ],
    "source": [
+    "from pytorch_utils import train\n",
+    "\n",
     "# train the model\n",
     "n_epochs = 13\n",
     "\n",
