more comments and descriptions in pytorch_utils - print messages improved

--- a/food-classifier_resume_training.ipynb
+++ b/food-classifier_resume_training.ipynb
@@ -11,8 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After 150 epoch of Sagemaker training (almost 3 days long), the model reached an accuracy of 66% on the full test set.  \n",
-    "This is an attempt of continuing the training locally adding more epochs."
+    "Notebook for performs training across multiple sessions, resuming the previous saved state at each session."
    ]
   },
   {
@@ -210,19 +209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-642b05bd75d8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpytorch_utils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mload_checkpoint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mmodel_retr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscheduler\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart_epoch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlosslogger\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_loss_tracker\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalid_loss_tracker\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_checkpoint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel_transfer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer_transfer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscheduler_transfer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcriterion_transfer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mmodel_retr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel_retr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\OneDrive\\Learning\\Udacity\\machine_learning_engineer\\udacity_capstone-project\\food-classifier\\pytorch_utils.py\u001b[0m in \u001b[0;36mload_checkpoint\u001b[1;34m(model, optimizer, scheduler, losslogger, filename)\u001b[0m\n\u001b[0;32m    179\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mload_checkpoint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscheduler\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlosslogger\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'models/model_res_101cat.pt.tar'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m     \u001b[1;31m# Note: Input model & optimizer should be pre-defined.  This routine only updates their states.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 181\u001b[1;33m     \u001b[0mstart_epoch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    182\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    183\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"=> loading checkpoint '{}'\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=> loading checkpoint 'models/model_res_101cat.pt.tar'\n",
+      "=> loaded checkpoint 'models/model_res_101cat.pt.tar' (epoch 131)\n",
+      "Starting from the best model trained so far (based on validation results)\n"
      ]
     }
    ],
@@ -248,29 +244,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 83 done in 3232.67 seconds at 23:32:56. \tTraining Loss: 1.806 \tValidation Loss: 1.303\n",
-      "Epoch 84 done in 3286.95 seconds at 0:27:43. \tTraining Loss: 1.812 \tValidation Loss: 1.304\n",
-      "Epoch 85 done in 3321.82 seconds at 1:23:5. \tTraining Loss: 1.807 \tValidation Loss: 1.304\n",
-      "Epoch 86 done in 3337.44 seconds at 2:18:42. \tTraining Loss: 1.791 \tValidation Loss: 1.303\n",
-      "Epoch 87 done in 3360.27 seconds at 3:14:43. \tTraining Loss: 1.803 \tValidation Loss: 1.309\n",
-      "Epoch 88 done in 3285.09 seconds at 4:9:28. \tTraining Loss: 1.798 \tValidation Loss: 1.297\n",
-      "Epoch 89 done in 3255.10 seconds at 5:3:43. \tTraining Loss: 1.802 \tValidation Loss: 1.293\n",
-      "Epoch    90: reducing learning rate of group 0 to 7.5000e-05.\n",
-      "Epoch 90 done in 3205.93 seconds at 5:57:9. \tTraining Loss: 1.804 \tValidation Loss: 1.291\n",
-      "Epoch 91 done in 3121.26 seconds at 6:49:10. \tTraining Loss: 1.779 \tValidation Loss: 1.280\n",
-      "Epoch 92 done in 3237.66 seconds at 7:43:8. \tTraining Loss: 1.777 \tValidation Loss: 1.288\n",
-      "Epoch 93 done in 2990.92 seconds at 8:32:59. \tTraining Loss: 1.775 \tValidation Loss: 1.272\n",
-      "Epoch 94 done in 3130.10 seconds at 9:25:9. \tTraining Loss: 1.776 \tValidation Loss: 1.268\n",
-      "Epoch 95 done in 3011.81 seconds at 10:15:22. \tTraining Loss: 1.775 \tValidation Loss: 1.268\n",
-      "13 epochs trained in 41778.197 seconds. \n",
-      "Best model obtained at epoch 95 with minimum validation loss : 1.268\n"
+      "Epoch 132 done in 42.0 minutes and 51 seconds at 0:38:19. \tTraining Loss: 1.721 \tValidation Loss: 1.220\n",
+      "Epoch 133 done in 46.0 minutes and 45 seconds at 1:25:4. \tTraining Loss: 1.725 \tValidation Loss: 1.217\n",
+      "Last epoch was not saved in {} since both validation and training loss didn't improve.\n",
+      "Epoch 134 done in 45.0 minutes and 50 seconds at 2:10:54. \tTraining Loss: 1.733 \tValidation Loss: 1.193\n",
+      "Last epoch was not saved in {} since both validation and training loss didn't improve.\n",
+      "Epoch 135 done in 45.0 minutes and 36 seconds at 2:56:30. \tTraining Loss: 1.719 \tValidation Loss: 1.204\n",
+      "Epoch 136 done in 44.0 minutes and 34 seconds at 3:41:4. \tTraining Loss: 1.730 \tValidation Loss: 1.194\n",
+      "Last epoch was not saved in {} since both validation and training loss didn't improve.\n",
+      "Epoch 137 done in 45.0 minutes and 25 seconds at 4:26:29. \tTraining Loss: 1.722 \tValidation Loss: 1.202\n",
+      "Last epoch was not saved in {} since both validation and training loss didn't improve.\n",
+      "Epoch 138 done in 43.0 minutes and 25 seconds at 5:9:54. \tTraining Loss: 1.716 \tValidation Loss: 1.204\n",
+      "Epoch   139: reducing learning rate of group 0 to 1.5000e-04.\n",
+      "Epoch 139 done in 43.0 minutes and 29 seconds at 5:53:24. \tTraining Loss: 1.717 \tValidation Loss: 1.207\n",
+      "Last epoch was not saved in {} since both validation and training loss didn't improve.\n",
+      "8 epochs trained in 5.0 hours, 57.0 minutes and 55 seconds. \n",
+      "Best model obtained at epoch 132 with minimum validation loss : 1.191\n"
      ]
     }
    ],
@@ -278,7 +274,7 @@
     "from pytorch_utils import train\n",
     "\n",
     "# train the model\n",
-    "n_epochs = 13\n",
+    "n_epochs = 8\n",
     "\n",
     "nc = 101\n",
     "\n",
