--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Due to the large size of the dataset, some experiment has been done reducing the number of classes to 3 speeding up training."
+    "Due to the large size of the dataset, some experiment has been done reducing the number of classes, speeding up training for preliminary experiments."
    ]
   },
   {
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected categories : ramen, carrot_cake, beef_carpaccio, strawberry_shortcake, escargots, donuts, croque_madame, cheesecake, caprese_salad, sashimi, oysters, caesar_salad, pho, hot_and_sour_soup, beef_tartare, creme_brulee, cup_cakes, miso_soup, pork_chop, paella, club_sandwich, spaghetti_carbonara, red_velvet_cake, shrimp_and_grits, hamburger, hummus, apple_pie, takoyaki, chicken_wings, fried_calamari, chicken_quesadilla, greek_salad, cannoli, frozen_yogurt, fried_rice, edamame, beet_salad, steak, ice_cream, onion_rings, ceviche, bruschetta, pad_thai, filet_mignon, pulled_pork_sandwich, prime_rib, garlic_bread, panna_cotta, clam_chowder, spaghetti_bolognese, bread_pudding, risotto, tiramisu, gnocchi, crab_cakes, samosa, eggs_benedict, scallops, ravioli, breakfast_burrito, chocolate_cake, lasagna, seaweed_salad, french_onion_soup, tuna_tartare, bibimbap, french_fries, guacamole, pancakes, macarons, grilled_salmon, chicken_curry, sushi, peking_duck, mussels, tacos, beignets, pizza, grilled_cheese_sandwich, omelette, dumplings, baby_back_ribs, spring_rolls, hot_dog, chocolate_mousse, fish_and_chips, macaroni_and_cheese, baklava, foie_gras, deviled_eggs, cheese_plate, lobster_bisque, huevos_rancheros, nachos, french_toast, waffles, gyoza, churros, lobster_roll_sandwich, falafel, poutine\n"
+      "Selected categories : ramen, carrot_cake, beef_carpaccio\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
     "folders_sorted = sorted(os.listdir(data_dir))\n",
     "\n",
     "#number of categories to randomly select\n",
-    "nc = 101\n",
+    "nc = 3\n",
     "\n",
     "#selecting a randomn subset of categories\n",
     "seed(42)\n",
@@ -127,9 +127,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60600 images used for training\n",
-      "15150 images used for validation\n",
-      "25250 images used for testing\n"
+      "1800 images used for training\n",
+      "450 images used for validation\n",
+      "750 images used for testing\n"
      ]
     }
    ],
