../data fixed at download stage

--- a/food-classifier_mini_experiment.ipynb
+++ b/food-classifier_mini_experiment.ipynb
@@ -57,14 +57,14 @@
    "outputs": [],
    "source": [
     "#the data will be downloaded and automatically extracted to the data folder ../data/food-101/images\n",
-    "%mkdir data\n",
+    "%mkdir ../data\n",
     "!wget -O ../data/food-101.tar.gz http://data.vision.ee.ethz.ch/cvl/food-101.tar.gz\n",
     "!tar -zxf ../data/food-101.tar.gz -C data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
